# spcal_dist

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
configs/: re_mul8x12_total.yaml  sp_demo.yaml
configs/benchmark/: Priority.yaml  Regfile.yaml  adder.yaml  arbiter.yaml  bar.yaml  c1355.yaml  c17.yaml  c1908.yaml  c2670.yaml  c3540.yaml  c499.yaml  c5315.yaml  c6288.yaml  c7552.yaml  c880.yaml  cavlc.yaml  ctrl.yaml  dec.yaml  i2c.yaml  instin.yaml  log2.yaml  max.yaml  memctrl.yaml  multiplier.yaml  router.yaml  sin.yaml  sqrt.yaml  square.yaml  voter.yaml
demo/mac_20/: mac_20.yaml  mac_20_flattened.v
demo/riscv/: riscv.v  riscv.yaml  riscv_flattened.v
demo/simple_cycle/: simple_cycle.yaml  simple_cycle_flattened.v
docs/: fixed_point.md
scripts/: compile_all_with_nuitka.py  test_dist.sh
spcal_data/: README.md
spcal_data/cdl/: asap7sc7p5t_28_L.json  asap7sc7p5t_28_R.json  asap7sc7p5t_28_SL.json  asap7sc7p5t_28_SRAM.json  custom_cdl.json
spcal_data/lib/: asap7sc7p5t_AO_RVT_TT_nldm_211120.json  asap7sc7p5t_INVBUF_RVT_TT_nldm_220122.json  asap7sc7p5t_OA_RVT_TT_nldm_211120.json  asap7sc7p5t_SEQ_RVT_TT_nldm_220123.json  asap7sc7p5t_SIMPLE_RVT_TT_nldm_211120.json  manual.json
spcal_data/netlist/: Priority_flattened.v  Regfile_flattened.v  add_6_cla_netlist_flattened.v  adder_flattened.v  arbiter_flattened.v  bar_flattened.v  c1355_flattened.v  c17_flattened.v  c1908_flattened.v  c2670_flattened.v  c3540_flattened.v  c432_flattened.v  c499_flattened.v  c5315_flattened.v  c6288_flattened.v  c7552_flattened.v  c880_flattened.v  cavlc_flattened.v  (+14 more)
(+113 files in other folders)
