[project]
name = "spcal_dist"
version = "1.0.0"
description = "A toolchain to calculate sp of a cell"
authors = [{ name = "Yaqi Sun" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "pytest>=8.4.1",
    "black>=25.9.0",
    "autoflake>=2.3.1",
    "isort>=7.0.0",
    "py-spy>=0.4.1",
    "spcal",
]

[tool.uv.sources]
spcal = { path = "dist/spcal-0.9.1-py3-none-any.whl" }
